Fix a style issue with issue banners.
The recent change to issue banners had text that was vertically
off-center when not showing the buttons. This just fixes the line height
so it'll be correct.

--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -1143,8 +1143,11 @@
 }
 
 .issue-state {
+  @issue-state-height: 26px;
+
   font-weight: bold;
-  min-height: 26px;
+  line-height: @issue-state-height;
+  min-height: @issue-state-height;
   padding: 0.3em 0.6em 0.3em 2.5em;
   position: relative;
 
